--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-bootstrap": "^0.26.6"
+    "@types/react-router-bootstrap": "^0.26.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
