--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.33",
     "bootstrap": "^5.1.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.3",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
