--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/react-redux": "^7.1.33",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.3",
     "react-scripts": "5.0.1",
